--- a/VRChat/97/1169597.html
+++ b/VRChat/97/1169597.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BLuy8V4YSEiNizItmoCKUg4aW0LQ82BxUHKAvFD4s7Y="></script>
+    "CQc4m6B1SPfAkwHXo2xbf48b9VNjagFle/PaFJY53TA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ねこ印のお守り","description":"2019年も始まりましたね！　今年もよろしくお願いします！！\n\n・・・ということで、VR世界でも厄除けしたい方向けな白猫印のお守りを作成いたしました。ちゃんと中身も入ってるぞ！\nこっそり身につけておけば、幸運がやってくる・・・といいなぁ。\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ\n\n\n～詳細～\n・三角面数：723\n・まんまるしぇーだー適用済み\n　※必要に応じて最新版のシェーダーをご使用ください。\n・ダイナミックボーン対応\n・prefabやシーンデータ込み\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n","url":"https://booth.pm/ja/items/1169597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1169597/afc8d2fd-dc17-45d3-870e-492b306c2629_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BLuy8V4YSEiNizItmoCKUg4aW0LQ82BxUHKAvFD4s7Y="></script>
+    nonce="CQc4m6B1SPfAkwHXo2xbf48b9VNjagFle/PaFJY53TA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1169597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1169597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
