--- a/VRChat/63/1169463.html
+++ b/VRChat/63/1169463.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Lu2v2iXTLm+rmIS7p1qJrhWYUOrCY9aw3onDq95GWR0="></script>
+    "b5cwA/v2C3ZG8R27xXaLAT1JTM7V7XNd2QBPG9e15x0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"simple brooch","description":"シンプルなブローチです\n\n△228\n\n商用以外でならご自由にお使いいただけます\nワンポイントにどうぞ\n\nお問い合わせは以下のTwitterアカウントへ\n@Orca_is_me_VR","url":"https://booth.pm/ja/items/1169463","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1169463/efe1acd6-87f5-47df-887f-a4eb6c850aaa_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Lu2v2iXTLm+rmIS7p1qJrhWYUOrCY9aw3onDq95GWR0="></script>
+    nonce="b5cwA/v2C3ZG8R27xXaLAT1JTM7V7XNd2QBPG9e15x0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1169463/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               522
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1169463/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               522
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
