--- a/VRChat/42/1169142.html
+++ b/VRChat/42/1169142.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Av6fGT9Q2F64rioepI0aoUUEfn+y4XLlFRgt/Kb6iiQ="></script>
+    "lfFA3saiN46hld/I/gkwBgjJrdZfqW+5sJlXnG/dfJE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Gem pierce","description":"シンプルなピアスです\nボーンはなし\nテクスチャもありません\n金具部分にはスタンダードシェーダー\n宝石部分にはお好みのGem shaderをご利用ください\n\n改変、無償配布アバターへの使用等OKです\n禁止事項は有償利用です\n\n△816\n\n質問があればお気軽に@Orca_is_me_VRへどうぞ","url":"https://booth.pm/ja/items/1169142","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f3e21dbb-3a98-47e6-aaba-233f59ae5751/i/1169142/6de1e5f6-e7e8-4c1b-a43a-67fbfd0deeda_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Av6fGT9Q2F64rioepI0aoUUEfn+y4XLlFRgt/Kb6iiQ="></script>
+    nonce="lfFA3saiN46hld/I/gkwBgjJrdZfqW+5sJlXnG/dfJE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1169142/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               536
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1169142/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               536
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
