--- a/VRChat/35/1168835.html
+++ b/VRChat/35/1168835.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0S2Egb3BdUJQG56+y0IGZDwMy0g8mceB2Zm06U0KnIE="></script>
+    "w3YB/9o6jaxshlit+d+mJTq1+Iwhk1PsxbppMdEw9L8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ミトン手袋3Dモデル","description":"VRChat用キャラクターに装着させたりさせるミトン手袋モデルです。\nポリゴン数：294△（片方のみ）\n\n\n※画像はUTS2を適用しております\n※キャラクターモデルは付属しません","url":"https://booth.pm/ja/items/1168835","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3aa1bab8-cccc-48b8-ac57-d4085ce31722/i/1168835/f9be8695-11d9-4625-a775-22a09f56a4fb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0S2Egb3BdUJQG56+y0IGZDwMy0g8mceB2Zm06U0KnIE="></script>
+    nonce="w3YB/9o6jaxshlit+d+mJTq1+Iwhk1PsxbppMdEw9L8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1168835/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1168835/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
