--- a/VRChat/87/1168687.html
+++ b/VRChat/87/1168687.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FHBDbPtGGmiyrugbH+F/dKZ52B1LUPK0KceWcVc1naY="></script>
+    "twPBlCuI6fgKwCL1jtUJErAi0Eez+COaJLShHJ1VaxA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"動く缶バッジテンプレート","description":"◇動く缶バッジが簡単に作れるテンプレートです◇\n\nサンプル\nhttps://twitter.com/lept_on/status/1080841919226245126\n\nいろいろなチームロゴなどをアバターにつけたいあたなへ\n一味違った缶バッジが簡単に作れます！\n\n背景、文字、ロゴを別レイヤーとして表示し、文字を回転させることができるオリジナルのshaderが入っています。\n\n文字は横一列に並んだテクスチャを用意するだけでOK！\nshaderで円形に変換します。\n\n\n◇用意するもの\n・透過処理したロゴ\n・透過処理したロゴの周りや後ろに回したい文字や模様\n・好きな背景（単色の場合は不要）\n\n\n-内容-\n・KanBadge.unitypackage\n・Kan Badge Shader使い方\n・利用規約\n\n\n-利用規約-\n\n○ 禁止事項\n\n◇モデルのメッシュ及びテクスチャ及びshaderに関して\n\n・データの全部又は一部を流用して作成したものの配布・販売等 (二次配布)\n・本データの製作者を名乗る・偽る行為\n\n以上の行為を禁止します。\n\n\n○ 利用に関して\n\n◇本データ全体に関して\n・本データを利用したことにより発生したあらゆる不具合・損失・トラブルに対し、製作者は一切の責任を負いません。","url":"https://booth.pm/ja/items/1168687","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/408b6933-3b28-43c3-ad6b-bcf87be77732/i/1168687/2df5f988-0524-4dc0-84ff-c9b8a758481d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FHBDbPtGGmiyrugbH+F/dKZ52B1LUPK0KceWcVc1naY="></script>
+    nonce="twPBlCuI6fgKwCL1jtUJErAi0Eez+COaJLShHJ1VaxA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1168687/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               291
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1168687/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               291
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
