--- a/VRChat/39/1157139.html
+++ b/VRChat/39/1157139.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LB0pUMFIzGBVlnRhqEAkWw2YrFRXiQEGNK6A18C98TI="></script>
+    "DUvzZl4F5I6wmDqOvZjclzF9gd7BU775U1G6PE9YuEg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【SPECIFICATION】DL版","description":"オリジナルVRChatアバターイラスト本のDL販売verです。\n2019年12月開催、コミックマーケット95にて頒布しました。\n\n本文PDF(表紙（裏表）+本文16p)\n+本文・表紙原寸イラスト(.jpg形式 8枚)\n+DL限定新規描き下ろしイラスト1枚(.jpg形式)\n+本文に使用したイラスト1点と描き下ろしイラストのPSDデータ\n\n上記3点がzipファイルに入っています。\n\n描き下ろしイラストおよび、本文の無断転載は禁止しております。\n\n==========================================\n[EN]\nDistributed at Comic Market 95\nVRChat avatar illustration book DL sales ver.\n\nPDF contents: cover + body 16 p (total 20p)\n+ Original size illustration \u0026 cover (.jpg format 8 sheets)\n+ Newly drawn illustrations 1 piece (.jpg format) \n [DL sales only!]\n+2 pieces of PSD data: illustration used in the book and newly drawing illustration\n\nThe above three points are included in the zip file.\n\nUnauthorized reproduction of the contents is forbidden","url":"https://booth.pm/ja/items/1157139","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1100"},"image":"https://booth.pximg.net/c/620x620/20826089-43e2-4bc1-b584-bced5fe87bd5/i/1157139/88d72391-765d-4041-97ec-3536d1092494_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LB0pUMFIzGBVlnRhqEAkWw2YrFRXiQEGNK6A18C98TI="></script>
+    nonce="DUvzZl4F5I6wmDqOvZjclzF9gd7BU775U1G6PE9YuEg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,6 +142,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +158,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -200,7 +200,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1157139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -215,14 +215,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1157139/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
