--- a/VRChat/97/1168197.html
+++ b/VRChat/97/1168197.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GW1C3yb7YR/cdImUVjBdHjhDF0tyjc49Bwi1SPWtQXc="></script>
+    "5iFejRzJbUKvhEicPVDOyPcSsy8VhBwFaw75QgYzg8s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『トモダチ』","description":"VRC向けのオリジナルアバターです。\nDynamicBoneとYMatShader2に対応しています。\n\n\n※予めUnityプロジェクトにVRCSDK、及びDynamicBone(任意)をインポートした状態でunitypackageをインポート、フォルダ階層内のassetsにある「tomodachi」をHierarchyにドラッグ＆ドロップするとアップロードできる状態でセットアップされます。\n\n※YMatShader2は同梱させて頂いていますのでインポートしていただく必要はございません。\n\n※改変用に各種データを同梱させていますが、無改変で使う場合はunitypackage以外は使用しません。\n\nVRCSDK\n→　https://www.vrchat.net/home/download\n\nYMatShader2\n→　https://booth.pm/ja/items/1060579\n金属表現やノーマルマップの表現に非常に優れたシェーダーなのでぜひぜひ使ってみていただきたいおすすめのシェーダーです。\n\nDynamicBone\n→　https://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743\n\n\nポリゴン数：△24817\nオブジェクト、マテリアル数：1\n\n\n\n本データはVRCでの利用を想定しております。\n本データを利用したことによって生じるいかなる損害に対しても当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・本データ、あるいは本データを基にした改変物を取り出せる状態での再配布は行わないでください。\n・自作発言等、作者を偽る発言はおやめください。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n・このページのURLとモデル名をクレジットとして記載した上でのこのモデルを使用したバーチャルYouTuber活動やそれに類する活動を許可します。\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用、およびVRCへのパブリック状態でのアップデートでの使用は禁止します。","url":"https://booth.pm/ja/items/1168197","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/96ef0fd4-a352-46e3-8f16-59deaadb4c5a/i/1168197/04562a71-a0b5-44f2-853a-9e406035950c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GW1C3yb7YR/cdImUVjBdHjhDF0tyjc49Bwi1SPWtQXc="></script>
+    nonce="5iFejRzJbUKvhEicPVDOyPcSsy8VhBwFaw75QgYzg8s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1168197/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               96
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1168197/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               96
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
