--- a/VRChat/40/1167540.html
+++ b/VRChat/40/1167540.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OiqP/18CSiMsbHhP7Yxdahywcbxw4B9fBh4mCHOapeQ="></script>
+    "/y6IAE7owcQIv3nnmXLc7KX32p4yCVVm55ZksA9E7As="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"氷の結晶ヘアピン","description":"「氷の結晶ヘアピン(VRChat想定）」をダウンロードいただきありがとうございます。\n内容については以下のとおりになっております。\n\n【ポリゴン数・テクスチャ】\n・氷の結晶ヘアピン　△1876\n\n【内容物】\n・氷結晶ヘアピン.unitypackage\n・Readme.txt\n\n\n【利用規約】\n▲CC0で著作権を放棄し、パブリックドメインに提供します。ご自由にお使いください。\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n・クレジット記載不要、商業利用可\n\n・このモデルの作成者を騙ることの禁止\n\n・当モデルを使用して発生したトラブルに一切の責任を作成者は負いません。\n\n――――――――――――――――――――――――――――――――――――――\n\n▲制作者の連絡先\n　ご不明な点があれば、ご連絡ください\n\n制作者：れみーと\n\nTwitter : @remiiiiiiit\n\n――――――――――――――――――――――――――――――――――――――\n","url":"https://booth.pm/ja/items/1167540","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/00dca8ed-9814-4b4e-bd26-029d6809f5ee/i/1167540/ede2ecc2-ead2-4f5a-9504-92693d939c8f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OiqP/18CSiMsbHhP7Yxdahywcbxw4B9fBh4mCHOapeQ="></script>
+    nonce="/y6IAE7owcQIv3nnmXLc7KX32p4yCVVm55ZksA9E7As="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1167540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1167540/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
