--- a/VRChat/55/1166255.html
+++ b/VRChat/55/1166255.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "s1pI6pHl5SwOBzD5AD3FU7sJGdXNCUuh9qT8IBIo+Cg="></script>
+    "lYkr7ShVENvG1JzZ4/AdZaCvG2dQkVvBOxlh4JF4Cso="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『イワシちゃん』","description":"本モデルはVRChat等での使用を想定したオリジナル3Dモデル『イワシちゃん』になります！\n\n△Polygon 20903\nアイトラッキング対応\nフルボディトラッキング対応\nDynamicBone設定済み\nArktoonシェーダー同梱\nVRChat対応\nVRM同梱\n\n瞬き＋リップシンク15種＋あいうえおん＋表情モーフ27種\n表情アニメーション7種設定済み\n\n\n※ 本モデルのUnityPackageをインポートする前にVRCSDK、Arktoon-shaders（同梱）、DynamicBone（お持ちの場合）をインポートしてください。","url":"https://booth.pm/ja/items/1166255","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1840"},"image":"https://booth.pximg.net/c/620x620/030a2645-c1e5-4596-84e0-6756664df27c/i/1166255/2f521f81-f25b-4b03-bd66-42b4307f7686_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s1pI6pHl5SwOBzD5AD3FU7sJGdXNCUuh9qT8IBIo+Cg="></script>
+    nonce="lYkr7ShVENvG1JzZ4/AdZaCvG2dQkVvBOxlh4JF4Cso="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,7 +187,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1166255/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1166255/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
